Try to deploy Francisco's changes to the gh-pages branch

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Tech donut 🍩 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
 </head>
-  <body>
-    Tech Donut
+  <body id="root">
+    This will disapear
   </body>
 </html>
