--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-</head>
-  <body id="root">
-    This will disapear
-  </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" type="image/png" href="favicon.ico" sizes="16x16" />
+  </head>
+  <body id="root"></body>
 </html>
