--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,16 @@
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/png" href="favicon.ico" sizes="16x16" />
   </head>
-  <body id="root"></body>
+  <body>
+    <div id="root"></div>
+  </body>
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"
+  ></script>
+  <script type="text/javascript">
+    ;(function () {
+      emailjs.init('<YOUR USER ID>') // Obtain your user ID at the dashboard https://dashboard.emailjs.com/integration
+    })()
+  </script>
 </html>
